# arduino-cli-cmake-wrapper

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitchangelog.rc  .gitlint  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.rst  DEVELOPER_NOTES.rst  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: github-actions.yml
ci/templates/.github/workflows/: github-actions.yml
docs/: conf.py  installation.rst  usage.rst
docs/reference/: arduino_cli_cmake_wrapper.rst  index.rst
src/arduino_cli_cmake_wrapper/: __init__.py  builder.py  cli.py  miner.py  parse.py  parser.py  sketch.py  types.py  util.py
tests/: test_arduino_cli_cmake_wrapper.py
